<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Planner</string>
    <string name="beacon_uuids" tools:ignore="TypographyDashes">fda50693-a4e2-4fb1-afcf-c6eb07647825</string>
    <string name="api_path">"https://maps.googleapis.com/"</string>

    <!--Titles-->
    <string name="title_activity_main">Planner</string>

    <!--Commons-->
    <string name="alert_dialog_oops">Oops</string>
    <string name="alert_dialog_problem">Encountered a problem</string>
    <string name="common_dialog_ok">OK</string>
    <string name="common_dialog_cancel">Cancel</string>
    <string name="common_dialog_back">Back</string>
    <string name="unexpected_error">Unexpected error</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="location_permission_refused_dialog_title">Location permission is needed</string>
    <string name="location_permission_refused_dialog_content">In order to properly work and provide you with ideas, we need to know your location</string>
    <string name="learn_more">Learn more</string>
    <string name="may_be_worth_seeing">may be worth seeing</string>
    <string name="sights_channel_id">SIGHTS_CHANNEL_ID</string>
    <string name="sights_channel_name">Sights around you</string>
    <string name="see_more_details">See more details…</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="i_am_a_child">I am a child</string>
    <string name="i_can_see_museums">I can see museums</string>
    <string name="i_can_see_art_galleries">I can see art galleries</string>
    <string name="i_can_take_part_in_physical_activities">I can take part in physical activities</string>
    <string name="i_can_pay_for_entry_up_to">I can pay for entry up to:</string>
    <string name="menu_settings_title">Settings</string>
    <string name="geocoder_encountered_a_problem">Geocoder encountered a problem</string>
    <string name="try_rebooting_your_device">Try rebooting your device.</string>
    <string name="menu_refresh_title">Refresh</string>
</resources>
